--- a/content/post/2020-12-01-r-rmarkdown/index.Rmd
+++ b/content/post/2020-12-01-r-rmarkdown/index.Rmd
@@ -216,4 +216,4 @@ print(newone)
 The number of people aged 0-19 is the most infected. Then it slowly declines with age. People under the age of 19 have the highest number of infections. Probably because people from 0-19 have relatively weak awareness of virus prevention and a large number of students stay in school every day. The 70-year-old man’s infection cases increases sharply due to weak resistance and poor physical fitness. This reminds people to strengthen the protection of people under 19 and over 70.
 
 <h2>Conclusion</h2>
-Four conclusions and advice can be found from all above data and graphs. First, the coastal areas, especially the Sydney metropolitan area, have the highest infection rate. People should pay attention to protection when going to these areas. Second, there are many infected people in residential areas and many cases have not been traced to the source. This means that as long as you go out of the house, you must wear a mask. The government should improve the checkin system as soon as possible. Third, people in age groups 0-19 and 70+ should get vaccinated as soon as possible and wear masks in their daily lives.
+Four conclusions and advice can be found from all above data and graphs. First, the coastal areas, especially the Sydney metropolitan area, have the highest infection rate. People should pay attention to protection when going to these areas. Second, there are many infected people in residential areas and many cases have not been traced to the source. This means that as long as people go out of the house, people should wear a mask. The government should improve the checkin system as soon as possible. Third, people in age groups 0-19 and 70+ should get vaccinated as soon as possible and wear masks in their daily lives.
